tests/ui/imports/ambiguous-import-visibility-globglob-reexport.stderr
error[E0365]: `S` is only public within the crate, and cannot be re-exported outside
  --> $DIR/ambiguous-import-visibility-globglob-reexport.rs:11:16
   |
LL | pub(crate) use m_crate::*;
   |                ^^^^^^^^^^ re-export of crate public `S`
   |
   = note: consider declaring type or module `S` with `pub`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0365`.
